== 0.23.4

== 0.23.3

* Bug Fix
  * Dragging groups now correctly prompts user to select all, completed, or single sticky
    * Due to a change in Rails 3.2.7 to Rails 3.2.8 how data attributes are specified in divs

== 0.23.2

* Enhancements
  * Updated to Rails 3.2.8

== 0.23.1

* Enhancements
  * Sticky JSON API filters
    * owner_id: me, returns stickies assigned to the current user
    * unassigned: 1, returns stickies that are not assigned to a specific user
    * due_date_start_date and due_date_end_date can be specified as mm/dd/yy or mm/dd/yyyy
  * Sticky JSON API returns group_description
  * Updated to Rails 3.2.7
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * Daily Digest emails now include stickies created/completed, and comments created over the weekend in the monday digest
  * Project invites now display the invite url, and display who invited the user by mousing over the email

* Bug Fix
  * Height of the drop down menu for sticky exports is now consistent with other drop down menus
  * Tags filters on stickies page no longer use colors for deleted tags

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.23.0

* Enhancements
  * Daily digest emails are now available for users who prefer a digest of the previous day included stickies added, completed, and comments made
  * Stickies can now be reassigned to another user in bulk from the project page
  * Users can now be added by email to projects without requiring the user to be signed up
  * Calendar Changes:
    * Calendar filters have been simplified and given a consistent look
    * Sticky popups are now cleaner and no longer display the words, 'description', 'project', or 'tags' as these can be deduced by context
    * Dragging grouped stickies on the calendar now prompts whether to move the invidual sticky, all incomplete stickies in the group, or all the stickies in the group

== 0.22.6

* Enhancements