@@ -42,7 +42,9 @@ class Project < ActiveRecord::Base
   end
 
   def as_json(options={})
-    super(only: [:id, :user_id, :name, :description, :start_date, :end_date, :created_at, :updated_at], methods: [:project_link])
+    json = super(only: [:id, :user_id, :name, :description, :start_date, :end_date, :created_at, :updated_at], methods: [:project_link])
+    json[:color] = options[:current_user].blank? ? '#777777' : self.color(options[:current_user])
+    json
   end
 
   def project_link
