@@ -1,5 +1,8 @@
 == 0.23.4
 
+* Enhancements
+  * Project JSON API returns color
+
 == 0.23.3
 
 * Bug Fix
